<resources>
    <string name="app_name">Sri vannamayil chits customer </string>
    <string name="user_mobile">User-ID or Mobile No.</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="signin">Login</string>
    <string name="logwithtouchid">Login with Touch ID</string>
    <string name="str_submit">Submit</string>
    <string name="str_verify">Verify</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_enterotp">Enter the One time password sent to you by sms or E-mail</string>
    <string name="str_to_enable_fingerprint">To enable Fingerprint, Please Login</string>
    <string name="signup">Sign up</string>
    <string name="gen_otp">Generate OTP</string>
    <string name="otp">OTP</string>
    <string name="submitotp">Submit OTP</string>
    <string name="changepass">Change Password</string>
    <string name="newpass">New Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Rs">\u20B9</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_mychits">My Chits</string>
    <string name="menu_myaccntcopy">My Account Copy</string>
    <string name="receipts">Receipts</string>
    <string name="menu_newchits">New Commenced Chits</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_notification">Notification</string>
    <string name="str_cominsonn">Coming Soon !!</string>
    <string name="groupname">Group Name / Ticket No.</string>
    <string name="advance">Advance Amount</string>
    <string name="paid">Paid Amount</string>
    <string name="pending">Pending Amount</string>
    <string name="receivedamnt">Received Amount</string>
    <string name="paytype">Payment Type</string>
    <string name="monthlyamnt">Monthly Amount</string>
    <string name="scheme_name">Scheme Name</string>
    <string name="totalpaid">Total Due Paid</string>
    <string name="viewrecpts"><![CDATA[View Receipts ->]]></string>
    <string name="recptdetails">Receipt Details -></string>
    <string name="im_interested">I\'m Interested</string>
    <string name="chitval">Chit Value</string>
    <string name="tot_months">Total Months</string>
    <string name="send_interest">Send Interest</string>
    <string name="remark">Remarks</string>
    <string name="cheque_tc">*Cheque Receipts will be shown once cleared</string>
    <string name="quote">\" START YOUR SAVINGS JOURNEY TODAY \"</string>
</resources>
