<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".Fragments.NewChits">

    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"                                  android:id="@+id/guideline5"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3"/>
    <ImageView
            android:src="@drawable/ic_new_commencement"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imageView8" app:layout_constraintTop_toBottomOf="@+id/pb_interest"
            android:elevation="@dimen/sp4_space"
            app:layout_constraintStart_toStartOf="parent"

            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:padding="@dimen/sp24_space"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline6"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.40389293"/>
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/pb_interest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            android:background="@color/colorPrimaryDarkest"/>
    <TextView
            android:text="@string/menu_newchits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/pb_interest"
            app:layout_constraintEnd_toEndOf="@+id/view"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" android:singleLine="false"
            android:textSize="18sp" android:inputType="textMultiLine" android:maxLines="2"/>

    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:elevation="@dimen/sp4_space"
            android:layout_height="wrap_content"
            android:id="@+id/pb_interest"
            android:indeterminate="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <LinearLayout
            android:id="@+id/firstlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scheme_name"
                    android:textColor="@color/grey_600"/>

            <TextView
                    android:id="@+id/txt_schemename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_700"
                    android:textStyle="bold"/>

        </LinearLayout>

        <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paid"
                    android:textColor="@color/grey_600"/>

            <TextView
                    android:id="@+id/txt_paid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_700"
                    android:textStyle="bold"/>

        </LinearLayout>

        <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="visible"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chitval"
                    android:textColor="@color/grey_600"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_700"
                    android:textStyle="bold" android:id="@+id/txt_chitvalue"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/secondlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp" android:layout_marginTop="@dimen/sp16_space"
            app:layout_constraintTop_toBottomOf="@+id/firstlayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tot_months"
                    android:textColor="@color/grey_600"/>

            <TextView
                    android:id="@+id/txt_totalmonths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_700"
                    android:textStyle="bold"/>

        </LinearLayout>
        <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>
        <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monthlyamnt"
                    android:textColor="@color/grey_600"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_600"
                    android:id="@+id/txt_monthlyamnt" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/thirdlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:layout_marginTop="@dimen/sp16_space"
            app:layout_constraintTop_toBottomOf="@+id/secondlayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tot_months"
                    android:textColor="@color/grey_600"/>

            <TextView
                    android:id="@+id/txt_totmembers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_700"
                    android:textStyle="bold"/>

        </LinearLayout>
        <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monthlyamnt"
                    android:textColor="@color/grey_600"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_600"/>
        </LinearLayout>
    </LinearLayout>

    <Button
            android:id="@+id/btn_send_interest"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            android:drawableRight="@drawable/ic_arrow_forward"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/send_interest" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_remark" app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:hint="@string/remark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_remark"
            app:layout_constraintTop_toBottomOf="@+id/thirdlayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minLines="3"
            android:gravity="left"
            android:background="@drawable/chitvalue_box"/>
</android.support.constraint.ConstraintLayout>