<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".Fragments.Groupwise_Receipts">

    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline5"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.3"/>
    <ImageView
            android:src="@drawable/ic_account_copy"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imageView8" app:layout_constraintTop_toBottomOf="@+id/pb_grprecpts"
            android:elevation="@dimen/sp4_space"
            app:layout_constraintStart_toStartOf="parent"

            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:padding="@dimen/sp24_space"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline6"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.4"/>
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/pb_grprecpts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            android:background="@color/colorPrimaryDarkest"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:elevation="@dimen/sp4_space"
            android:layout_height="wrap_content"
            android:id="@+id/pb_grprecpts"
            android:indeterminate="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline6"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/pb_grprecpts"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            android:padding="@dimen/sp8_space">

        <TextView
                android:text="@string/receipts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:singleLine="false"
                android:textSize="18sp"
                android:inputType="textMultiLine"
                android:maxLines="2"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/groupname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                android:layout_marginTop="@dimen/sp8_space"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                android:textColor="@color/colorWhite"
        />
        <TextView
                android:text="@string/totalpaid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:textColor="@color/colorWhite"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                android:layout_marginTop="16dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_total"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/guideline7" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/textView10"/>
        <TextView
                android:text="@string/cheque_tc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" android:layout_marginTop="8dp"/>
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/guideline7"
                                              android:orientation="vertical"
                                              app:layout_constraintGuide_percent="0.5"/>
        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_grpname"
                app:layout_constraintBottom_toBottomOf="@+id/textView8" android:layout_marginTop="8dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintTop_toTopOf="@id/textView8" app:layout_constraintStart_toStartOf="@+id/guideline7"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.v4.widget.SwipeRefreshLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline5"
            android:id="@+id/swiper_grpwise">

        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_groupwise_recpts"/>

    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.constraint.ConstraintLayout>